taking into account format corrections from REC tests

--- a/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="tooltipToDisplay && tooltipToDisplay.isVisible" class="tooltip-trigger">
+<div *ngIf="tooltipToDisplay && tooltipToDisplay.isVisible" class="tooltip-trigger align-items-center">
   <button #trigger class="btn-logo" (mouseenter)="show()" (mouseleave)="hide()" (touchstart)="toggle()">
     <img class="bird-icon" src="../../../../../assets/img/others/myjss-logos/white-logo.svg" />
   </button>
