--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -1,4 +1,27 @@
-<h1 class="h2 mb-4">Tableau de bord</h1>
+<div class="d-flex align-items-center justify-content-between mb-4">
+  <h1 class="h2 mb-0">Tableau de bord</h1>
+
+  <div ngbDropdown [autoClose]="'outside'" class="btn-group dropdown"
+    *ngIf="responsablesForCurrentUser && responsablesForCurrentUser.length > 0">
+    <button type="button" class="btn btn-outline-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
+      aria-expanded="false">
+      <i class="ai-filter me-2"></i>
+      Responsables
+    </button>
+    <div ngbDropdownMenu class="dropdown-menu my-1">
+      <label class="dropdown-item">
+        <input class="form-check-input me-2" type="checkbox" [(ngModel)]="selectAllResponsable"
+          (change)="selectAllResponsables()">
+        Sélectionner tout
+      </label>
+      <label class="dropdown-item" *ngFor="let respo of responsablesForCurrentUser">
+        <input class="form-check-input me-2" type="checkbox" [(ngModel)]="responsableCheck[respo.id]"
+          (change)="refreshStats()">
+        {{respo.firstname}} {{respo.lastname}}
+      </label>
+    </div>
+  </div>
+</div>
 
 <div class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4" *ngIf="statistics && !isLoadingStats">
   <div class="card-body">
