--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -76,6 +76,7 @@
                           </div>
                         </div>
                         <p class="h4 card-text-truncate pb-2"> <img *ngIf="post.isPremium" class="pe-0"
+                            src="/assets/images/premium-icon.svg"><img *ngIf="post.isHidePremium" class="pe-0"
                             src="/assets/images/premium-icon.svg">
                           {{post.titleText}}
                         </p>
