--- a/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
+++ b/client-jss/src/app/main/components/generic-hub/generic-hub.component.html
@@ -53,6 +53,7 @@
                           <h4>
                             <span role="button" tabindex="0" class="pointer card-text-truncate"
                               [routerLink]=' "/post/" + post.slug'> <img *ngIf="post.isPremium" class="pe-0"
+                                src="/assets/images/premium-icon.svg"><img *ngIf="post.isHidePremium" class="ms-1 pe-0"
                                 src="/assets/images/premium-icon.svg">
                               {{post.titleText}}</span>
                           </h4>
@@ -91,6 +92,7 @@
                           <h4>
                             <span role="button" tabindex="0" class="pointer card-text-truncate"
                               [routerLink]=' "/post/" + post.slug'> <img *ngIf="post.isPremium" class="pe-0"
+                                src="/assets/images/premium-icon.svg"><img *ngIf="post.isHidePremium" class="ms-1 pe-0"
                                 src="/assets/images/premium-icon.svg">
                               {{post.titleText}}</span>
                           </h4>
