--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -269,7 +269,8 @@
                 </div>
                 <h4>
                   <a class="card-text-truncate" (click)="openPost( )" [routerLink]='"/post/" + post.slug'> <img
-                      *ngIf="post.isPremium" class="col-auto pe-1"
+                      *ngIf="post.isPremium" class="col-auto pe-1" src="/assets/images/premium-icon.svg"><img
+                      *ngIf="post.isHidePremium" class="ms-1 pe-0"
                       src="/assets/images/premium-icon.svg">{{post.titleText}}</a>
                 </h4>
                 <div class="">
