--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -597,6 +597,9 @@
                   <div class="me-3">
                     <h3 class="h5 mb-2 text-blue">{{service.serviceLabelToDisplay}}
                     </h3>
+                    <p *ngIf="postTitle" class="card-text small">
+                      {{postTitle}}
+                    </p>
                     <p class="card-text small">
                       <strong>{{service.assoServiceDocuments.length == 0 ? 'Aucun ' :
                         service.assoServiceDocuments.length}}</strong>
