--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -186,9 +186,19 @@
                       <osi-tooltip tootltipCodeToDisplay="MYJSS_QUOTATION_REQUIRED_INFO_FILL_AL_TXT"
                         class="col-auto"></osi-tooltip>
                     </div>
-                    <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
+                    <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config" [data]="noticeValue"
                       (ready)="onEditorReady($event, provision)" (change)="onNoticeChange($event, provision)">
                     </ckeditor>
+                  </div>
+
+                  <div
+                    *ngIf=" !provision.isRedactedByJss && (!noticeTemplateDescription || !noticeTemplateDescription.isUsingTemplate)"
+                    class="col-12 pb-5 compact-upload-container">
+                    <label class="form-label">Importer un fichier Word pour remplir le champ de texte de
+                      l'annonce</label>
+                    <single-upload [entity]="entityFile" [entityType]="entityType" [isDirectUpload]="false"
+                      forcedFileExtension="DOCX" (fileDropped)="updateNoticeAnnouncement($event, provision)"
+                      [fullSize]="false"></single-upload>
                   </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row flex-sm-wrap align-items-center"
