--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -598,9 +598,9 @@
                     <h3 class="h5 mb-2 text-blue">{{service.serviceLabelToDisplay}}
                     </h3>
                     <p *ngIf="postTitle" class="card-text small">
-                      {{postTitle}}
+                      Article : {{postTitle}}
                     </p>
-                    <p class="card-text small">
+                    <p class="card-text small" *ngIf="!postTitle">
                       <strong>{{service.assoServiceDocuments.length == 0 ? 'Aucun ' :
                         service.assoServiceDocuments.length}}</strong>
                       document{{service.assoServiceDocuments.length == 0 ? '' : 's'}}
