--- a/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/osi-tooltip/osi-tooltip.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="tooltipToDisplay && tooltipToDisplay.isVisible" class="tooltip-trigger align-items-center">
-  <button #trigger class="btn-logo" (mouseenter)="show()" (mouseleave)="hide()" (touchstart)="toggle()">
+  <button #trigger class="btn-logo btn-trigger" (mouseenter)="show()" (mouseleave)="hide()" (touchstart)="toggle()">
     <img class="bird-icon" src="../../../../../assets/img/others/myjss-logos/white-logo.svg" />
   </button>
   <div class="tooltip-base" #tooltip
